fixed spacing on catagorie pages

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -175,5 +175,16 @@
 
   article {
     margin-top: 3em;
+
+    .entry-header {
+      img {
+        float: left;
+        margin-right: 1em;
+      }
+    }
+  }
+
+  article:last-child {
+    margin-bottom: 3em;
   }
 }
